tests/ui/flatten_and_methods.stderr
error: proc-macro derive panicked
  --> $DIR/flatten_and_methods.rs:19:10
   |
19 | #[derive(StructOpt, Debug)]
   |          ^^^^^^^^^
   |
   = help: message: methods and doc comments are not allowed for flattened entry
